--- a/hu_citrix_7x.adoc
+++ b/hu_citrix_7x.adoc
@@ -94,7 +94,7 @@ Main PID:  3789 (multipathd)
             3789  /sbin/multipathd
 ----
 
-There is no requirement to append content to the `/etc/multipath.conf` file, unless you have devices that you do not want to be managed by multipath or you have existing settings that override defaults. You can add the following syntax to the `multipath.conf` file to exclude the unwanted devices.
+There is no requirement to append content to the `/etc/multipath.conf` file, unless you have devices that you do not want multipath to manage or you have existing settings that override defaults. You can add the following syntax to the `multipath.conf` file to exclude the unwanted devices.
 
 ----
 # cat /etc/multipath.conf
