Add LUHU SLES 15 SP6 and other edits

--- a/_include/hu/reuse_hu_asa_configuration_note.adoc
+++ b/_include/hu/reuse_hu_asa_configuration_note.adoc
@@ -1,1 +1,1 @@
-NOTE: Do not use an excessive number of paths to a single LUN. No more than four paths should be required. More than eight paths might cause path issues during storage failures.
+NOTE: A single LUN should require no more than four paths. More than eight paths might cause path issues during storage failures.
