--- a/hu_ol_87.adoc
+++ b/hu_ol_87.adoc
@@ -56,7 +56,7 @@ For Oracle Linux (OL) 8.7, the `/etc/multipath.conf` file must exist. You do not
 
 include::_include/hu/reuse_hu_multipathing_non_asa.adoc[]
 
-The following sections provide sample multipath output for a LUN mapped to All SAN Array (ASA) and non-ASA configurations.
+The following sections provide sample multipath outputs for a LUN mapped to All SAN Array (ASA) and non-ASA configurations.
 
 include::_include/hu/reuse_hu_asa_configuration.adoc[]
 
