--- a/_include/hu/reuse_hu_installing_luhu_with32.adoc
+++ b/_include/hu/reuse_hu_installing_luhu_with32.adoc
@@ -4,7 +4,9 @@ NetApp strongly recommends installing the Linux Unified Host Utilities, but it i
 
 .What you'll need
 
-If you have a version of Linux Unified Host Utilities currently installed you should upgrade it or, you should remove it and use the following steps to install the latest version.
+If you have a version of Linux Unified Host Utilities currently installed you should upgrade or remove it and then use the following steps to install the latest version.
+
+.Steps
 
 .	Download the 32-bit or 64-bit Linux Unified Host Utilities software package from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] Site to your host.
 .	Use the following command to install the software package:
