--- a/hu_ol_90.adoc
+++ b/hu_ol_90.adoc
@@ -53,7 +53,7 @@ For Oracle Linux (OL) 9.0 the `/etc/multipath.conf` file must exist, but you do 
 
 include::_include/hu/reuse_hu_multipathing_non_asa.adoc[]
 
-The following sections provide sample multipath output for a LUN mapped to ASA and non-ASA personas.
+The following sections provide sample multipath outputs for a LUN mapped to ASA and non-ASA personas.
 
 include::_include/hu/reuse_hu_asa_configuration.adoc[]
 
