--- a/hu_sles_15SP4.adoc
+++ b/hu_sles_15SP4.adoc
@@ -74,17 +74,18 @@ include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
 
 SUSE Linux Enterprise Server 15 SP4 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly for both ASA and non-ASA configuration.
 
-The `multipath.conf` file must exist for the multipath daemon to start, but you can create an empty, zero-byte file by using the command:
-`touch /etc/multipath.conf`.
- 
-The first time you create this file, you might need to enable and start the multipath services.
+The `multipath.conf` file must exist for the multipath daemon to start. If this file does not exist, you can create an empty, zero-byte file by using the following command: 
 
-There is no requirement to add anything directly to the `multipath.conf` file, unless you have devices that you do not want to be managed by multipath or you have existing settings that override defaults.
+`touch /etc/multipath.conf`
 
-You can add the following syntax to the `multipath.conf` file to exclude the unwanted devices.
+The first time you create the `multipath.conf` file, you might need to enable and start the multipath services by using the following commands:
 
-Replace `<DevId>` with the `WWID` string of the device you want to exclude. Use the following command to determine the `WWID`:
+----
+# chkconfig multipathd on
+# /etc/init.d/multipathd start
+----
 
+There is no requirement to add anything directly to the `multipath.conf` file unless you have devices that you do not want multipath to manage or you have existing settings that override defaults. To exclude the unwanted devices, you add the syntax shown in the following example to the `multipath.conf` file, replacing <DevId> with the WWID string of the device you want to exclude.
 
 .Example
 In this example, `sda` is the local SCSI disk that we need to add to the blacklist.
