--- a/hu_ol_89.adoc
+++ b/hu_ol_89.adoc
@@ -27,7 +27,8 @@ In the following example, the `sanlun lun show` command returns LUN information.
 ----
 # sanlun lun show all
 ----
-Example output:
+
+.Example output:
 ----
 controller(7mode/E-Series)/              device     host               lun
 vserver(cDOT/FlashRay)  lun-pathname     filename   adapter  protocol  size   Product
